removed withlove image

--- a/index.html
+++ b/index.html
@@ -107,13 +107,12 @@
                         <div class="card col-sm-3" style="background-color:transparent; margin: 20px 0px 30px 0px;"><img src="./static/images/f4.png" height="90" /><br><br>
                             <!-- <h1 id="cursive">100% Healthy</h1> -->
                             HACCP regulations are followed while processing, in order to provide a clean impurity-free environment.
-</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row" data-aos="fade-up" data-aos-duration="1000">
-            <div><img src="static/assets/back-packaging.png" class="imageover" /></div>
             <div id="main">
 
                 <div>
@@ -126,8 +125,7 @@
                             <br> From ready to prepare curry cuts, delicious and juicy fish steaks, to crunchy squid rings, if you consider yourself a connoisseur of fine dishes, especially of seafood, then rest assured, Frescamer is your next favorite
                             chef.
                             <br>
-                            <br>
-                            -Team Frescamer
+                            <br> -Team Frescamer
                         </p>
                     </div>
                 </div>
