--- a/contact/index.html
+++ b/contact/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body style="background-image: url(../static/assets/fresbg2.jpg">
+<body style="background-image: url(../static/assets/grey2.png)">
     <div class="container">
         <div class="topnav">
             <div>
