--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div id="main">
 
                 <div>
-                    <div><img src="static/images/image.jpg" class="imgSide" alt="">
+                    <div><img src="static/assets/back-packaging.png" class="imgSide" alt="">
 
                         <p>We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality. World class facilities process and preserve the seafood so as to ensure that each and every one of our
                             products are export quality, which is the best quality of food you would find in the market. Strict quality control measures are followed including HACCP regulations while processing, as well as quick freezing for the seafood
