--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,7 +16,7 @@
     <title>Gallery</title>
 </head>
 
-<body style="background-image: url(../static/assets/fresbg2.jpg">
+<body style="background-image: url(../static/assets/grey2.png)">
 
     <div class="container">
         <div class="fab">
