--- a/contact/index.html
+++ b/contact/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="contact_info">
+                <div class="box column">
                     <h1>Contact info</h1><small>For further enquiries or clarifications, please contact: <br><br>
                     </small><a href="tel:+9865327410" style="font-size: 19px;"><i class="fa fa-phone"
                             aria-hidden="true"></i> 9865327410</a><br><br>
@@ -58,18 +58,19 @@
                             aria-hidden="true"></i>info@frescamer.com</a><br><br>
                     <a href="https://www.google.com/maps/place/Model+Engineering+College/@10.0283637,76.3263237,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c5006491601:0xcf23e14245d4694d!8m2!3d10.0283637!4d76.3285124" style="font-size: 19px;" style="font-size: 19px;"><i class="fa fa-map-marker"
                             aria-hidden="true"></i>
-                        <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
-                    </a><br><br>
+                        <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br></p>
+                    </a>
                     <div class="order">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?usp=sf_link">
                             <p style="color: white">Order Now</p>
                         </a>
 
                     </div>
+                    <br><br>
                 </div>
 
 
-                <div class="contact_info2">
+                <div class="box column">
                     <h1>Feedback</h1>
                     <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLScQoJ025q-nqt6njV1a0aGk5NaXzwADcP9xrBbGQ5uPG0cCRQ/formResponse" target="_self" method="POST" id="mG61Hd">
 
@@ -84,9 +85,12 @@
 
                         <label for="explain">Suggestions (if any):</label><br>
                         <textarea name="entry.568598450" id="explain"></textarea><br>
-                        <input class="button" type="submit" value="Submit">
-
+                        <br><br>
+                        <div class="order">
+                            <input class="submit" type="submit" value="Submit">
+                        </div>
                     </form>
+                    <br><br>
                 </div>
             </div>
             <!--<div class=" feedback">
