--- a/contact/index.html
+++ b/contact/index.html
@@ -82,12 +82,22 @@
 
                         <label for="explain">Rate your experience on this site.</label><br><br>
                         <!-- <input name="entry.1813641826" type="range" min="1" max="5" step="1"> -->
-                        <div class="rating">
-                        <label class="radio-inline"><input type="radio" name="entry.1813641826" class="star1" value="1">1</label>
-                        <label class="radio-inline"><input type="radio" name="entry.1813641826" class="star2" value="2">2</label>
-                        <label class="radio-inline"><input type="radio" name="entry.1813641826" class="star3" value="3">3</label>
-                        <label class="radio-inline"><input type="radio" name="entry.1813641826" class="star4" value="4">4</label>
-                        <label class="radio-inline"><input type="radio" name="entry.1813641826" class="star5" value="5">5</label>
+                        <div class="star-rating">
+                        <input id="star-1" type="radio" name="entry.1813641826" class="star1" value="5"><label for="star-1" >
+                            <i class="active fa fa-star" aria-hidden="true"></i>
+                        </label>
+                        <input id="star-2" type="radio" name="entry.1813641826" class="star2" value="4"><label for="star-2" >
+                            <i class="active fa fa-star" aria-hidden="true"></i>
+                        </label>
+                        <input id="star-3" type="radio" name="entry.1813641826" class="star3" value="3"><label for="star-3" >
+                            <i class="active fa fa-star" aria-hidden="true"></i>
+                        </label>
+                        <input id="star-4" type="radio" name="entry.1813641826" class="star4" value="2"><label for="star-4" >
+                            <i class="active fa fa-star" aria-hidden="true"></i>
+                        </label>
+                        <input id="star-5" type="radio" name="entry.1813641826" class="star5" value="1"><label for="star-5" >
+                            <i class="active fa fa-star" aria-hidden="true"></i>
+                        </label>
                         <br><br>
                         </div>
                         <label for="explain">Suggestions (if any):</label><br>
