--- a/contact/thankyouorder.html
+++ b/contact/thankyouorder.html
@@ -50,21 +50,9 @@
         <div class="container">
             <div class="row">
                 <div class="box column">
-                    <h1>Contact info</h1>For further enquiries or clarifications, please contact: <br><br>
-                          <a href="tel:+9865327410" style="font-size: 19px;"><i class="fa fa-phone"
-                            aria-hidden="true"></i> 9865327410</a><br><br>
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="font-size: 19px;"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>info@frescamer.com</a><br><br>
-                    <a href="https://www.google.com/maps/place/Model+Engineering+College/@10.0283637,76.3263237,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c5006491601:0xcf23e14245d4694d!8m2!3d10.0283637!4d76.3285124" style="font-size: 19px;" style="font-size: 19px;"><i class="fa fa-map-marker"
-                            aria-hidden="true"></i>
-                        <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br></p>
-                    </a>
-                    <div class="order">
-                        <a href=order.html>
-                            <p style="color: white">Order Now</p>
-                        </a>
-
-                    </div>
+                    <h1>Order Details</h1>Your order has been placed! <br>
+                    We will get in touch with you shortly!<br>
+                        
                     <br><br>
                 </div>
 
