--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Domine&display=swap" rel="stylesheet">
     <link rel="stylesheet" href='./style/style.css'>
     <link rel="stylesheet" href='../static/assets/global.css'>
     <title>Gallery</title>
+    <script>
+        $(function() {
+            $(document).scroll(function() {
+                var $nav = $(".topnav");
+                $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script>
 </head>
 
 <body style="background-image: url(../static/assets/grey2.png)">
@@ -20,7 +29,7 @@
                 <p id="mobi"> Contact Us</p>
             </a>
         </div>
-        <div class="topnav">
+        <div class="topnav topnav2">
             <div>
                 <a href="../">
                     <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
@@ -48,8 +57,9 @@
             <a href="../gallery/">Gallery</a>
 
         </div>
-        <div class="gallerytopbox">
-            <div class='bannerImage overlay'><!--<img src='../static/images/s1.jpg'>-->
+        <div id="box">
+            <div class='bannerImage overlay'>
+                <!--<img src='../static/images/s1.jpg'>-->
                 <div class="centered">
                     <h1>GALLERY</h1>
                 </div>
@@ -74,7 +84,7 @@
 
                 </div>
             </div>
-
+            <br>
             <div class="cardRow">
                 <div class="card">
                     <div class="prodImg" style="background-image: url('./images/4.JPG')">
@@ -92,7 +102,7 @@
 
                 </div>
             </div>
-
+            <br>
             <div class="cardRow">
                 <div class="card">
                     <div class="prodImg" style="background-image: url('./images/7.JPG')">
@@ -110,7 +120,7 @@
 
                 </div>
             </div>
-
+            <br>
             <div class="cardRow">
                 <div class="card">
                     <div class="prodImg" style="background-image: url('./images/10.JPG')">
@@ -128,7 +138,7 @@
 
                 </div>
             </div>
-
+            <br>
             <div class="cardRow">
                 <div class="card">
                     <div class="prodImg" style="background-image: url('./images/13.JPG')">
@@ -146,7 +156,7 @@
 
                 </div>
             </div>
-
+            <br>
 
 
         </div>
