--- a/contact/order.html
+++ b/contact/order.html
@@ -11,6 +11,7 @@
     <script type="application/javascript" src='../static/js/nav.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Domine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script>
@@ -134,12 +135,12 @@
             <div class="pair">
                 <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
-                    <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
+                    <p>FrescaMer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br></p>
                 </div>
                 <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                     <h3>CONTACT</h3><br>
-                    <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
-                            class="fa fa-phone" aria-hidden="true"></i> 9865327410</a><br><br>
+                    <a href="tel:+8289914837" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
+                            class="fa fa-phone" aria-hidden="true"></i> 8289914837</a><br><br>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
                             class="fa fa-envelope" aria-hidden="true"></i>
                         info@frescamer.com</a><br><br><br><br><br></p>
