--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Domine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -29,6 +30,7 @@
     <script type="text/javascript" src="static/js/slide.json"></script>
     <script type="text/javascript" src="static/js/index.js"></script>
     <script type="text/javascript" src="./static/js/nav.js"></script>
+    <link rel="icon" type="image/png" sizes="48x48" href="./static/images/flogo (copy).png">
     <script>
         $(function() {
             $(document).scroll(function() {
@@ -100,11 +102,11 @@
             }, 5000);
         </script>
         <div style="margin-top: 15%;" data-aos="fade-up" data-aos-duration="2000">
-            <img id="top-fish" src="static/images/fish1.png" style="width:20%; display:block;" />
+            <img id="top-fish" src="static/images/fish1.png" />
         </div>
         <div>
             <div data-aos="fade-up" data-aos-duration="2000">
-                <img id="best-of-best" src="static/images/best.png" style="width:30%; margin-left:auto; margin-right:auto; display:block;" />
+                <img id="best-of-best" src="static/images/best.png" />
             </div>
             <div class="tbox" style="background-color: transparent;box-shadow:none; margin: 0px auto 0px auto;" data-aos="fade-up" data-aos-duration="2000">
                 <div class="bootstrap-iso pair">
@@ -112,14 +114,14 @@
                         <div class="card-deck">
                             <div class="card col-sm-4" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f1.png" height="90" /><br><br>
                                 <!-- <h1 id="cursive">Stay Clean, Stay Green</h1> -->
-                                Sustainable and eco-friendly practices are used in order to minimise the impact on the environment.
+                                Sustainable and eco-friendly practices to minimise the impact on environment thus saving for the future generations.
                             </div>
                             <div class="card col-sm-4" style="background-color:transparent; margin: 20px 0px 50px 0px;"><img src="./static/images/f3.png" height="90" /><br><br>
                                 <!-- <h1 id="cursive">Quality Assured</h1> -->
                                 Strict lab tests and quick freezing for each and every product ensures the highest quality possible. </div>
                             <div class="card col-sm-4" style="background-color:transparent; margin: 20px 0px 30px 0px;"><img src="./static/images/f4.png" height="90" /><br><br>
                                 <!-- <h1 id="cursive">100% Healthy</h1> -->
-                                HACCP regulations are followed while processing, in order to provide a clean impurity-free environment.
+                                Adherence to HACCP principles ensure quality and freshness.
                             </div>
                         </div>
                     </div>
@@ -127,7 +129,7 @@
             </div>
         </div>
         <div data-aos="fade-up" data-aos-duration="2000">
-            <img id="bottom-fish" src="static/images/fish2.png" style="width:20%; float:right; display:block; margin-top: -5%;" />
+            <img id="bottom-fish" src="static/images/fish2.png" />
         </div>
         <div class="buffer"><br><br><br><br><br><br><br></div>
         <div class="mobile-buffer"><br><br><br></div>
@@ -155,12 +157,12 @@
             <div class="pair">
                 <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
-                    <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
+                    <p>FrescaMer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br></p>
                 </div>
                 <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                     <h3>CONTACT</h3><br>
-                    <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
-                            class="fa fa-phone" aria-hidden="true"></i> 9865327410</a><br><br>
+                    <a href="tel:+8289914837" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
+                            class="fa fa-phone" aria-hidden="true"></i> 8289914837</a><br><br>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i
                             class="fa fa-envelope" aria-hidden="true"></i> info@frescamer.com</a><br><br><br></p>
                 </div>
