--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <head>
     <meta charset="utf-8">
     <title>frescammer</title>
+    <link rel="icon" type="image/png" sizes="48x48" href="./static/images/flogo (copy).png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/assets/global.css">
     <link rel="stylesheet" type="text/css" href="static/css/index.css">
