--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Domine&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
+    <title>frescamer</title>
+    <link rel="icon" type="image/png" sizes="48x48" href="../static/images/flogo (copy).png">
     <link rel="stylesheet" href='./style/style.css'>
     <link rel="stylesheet" href='../static/assets/global.css'>
     <title>Gallery</title>
