added vertical divider

--- a/contact/order.html
+++ b/contact/order.html
@@ -69,18 +69,17 @@
                     <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLScJBeD0aHzTiEgXFI5qyIQBMiX2HgiXP8YcCfZHzmrwm1GQYQ/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true;" id="mG61Hd"><br>
 
                         <label>Email address:*</label><br>
-                        <input type="email" placeholder="Email Address*" name="entry.671390999" required><br>
+                        <input type="email" placeholder="Email Address*" name="entry.671390999" required><br><br>
                         <label>Items to Order:*</label><br><small style="font-family: 'Domine', italic">Please enter the number of each item that you want to buy:</small><br>
                         <textarea class="textbox" name="entry.1843040132" id="explain" required></textarea>
-                        <br>
-
+                        <br><br>
                         <div class="order">
                             <input class="submit" type="submit" value="Submit">
                         </div>
                         <br><br>
                     </form>
                 </div>
-
+                <div class="headerdivider"></div>
 
                 <div class="box column">
                     <h1>Feedback</h1>
