--- a/contact/thankyou.html
+++ b/contact/thankyou.html
@@ -61,21 +61,20 @@
                 <div class="box column">
                     <h1>Contact info</h1><small>For further enquiries or clarifications, please contact: <br><br>
                     </small><a href="tel:+8289914837" style="font-size: 19px;"><i class="fa fa-phone"
-                            aria-hidden="true"></i> 8289914837</a><br><br>
+                            aria-hidden="true"></i>   8289914837</a><br><br>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="font-size: 19px;"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>info@frescamer.com</a><br><br>
+                            aria-hidden="true"></i>   info@frescamer.com</a><br><br>
                     <a href="https://www.google.com/maps/place/Model+Engineering+College/@10.0283637,76.3263237,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c5006491601:0xcf23e14245d4694d!8m2!3d10.0283637!4d76.3285124" style="font-size: 19px;" style="font-size: 19px;"><i class="fa fa-map-marker"
                             aria-hidden="true"></i>
-                        <p>FrescaMer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br><br></p>
+                           FrescaMer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br><br>
                     </a>
                     <div class="order">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?usp=sf_link">
-                            <p style="color: white">Order Now</p>
-                        </a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?usp=sf_link"><input class="submit" type="submit" value="Order Now"></a>
 
                     </div>
                     <br><br>
                 </div>
+                <div class="headerdivider"></div>
 
                 <div class="box column">
                     <h1>Thank you for the feedback!</h1>
