--- a/contact/thankyouorder.html
+++ b/contact/thankyouorder.html
@@ -64,7 +64,7 @@
 
                     <br><br>
                 </div>
-
+                <div class="headerdivider"></div>
 
                 <div class="box column">
                     <h1>Feedback</h1>
