minor spelling mistakes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>frescammer</title>
+    <title>frescamer</title>
     <link rel="icon" type="image/png" sizes="48x48" href="./static/images/flogo (copy).png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/assets/global.css">
@@ -158,7 +158,7 @@
             <div class="pair">
                 <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
-                    <p>FrescaMer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br></p>
+                    <p>Frescamer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br></p>
                 </div>
                 <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                     <h3>CONTACT</h3><br>
