--- a/services/index.html
+++ b/services/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>frescammer</title>
+    <title>frescamer</title>
     <link rel="icon" type="image/png" sizes="48x48" href="../static/images/flogo (copy).png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
