--- a/gallery/index.html
+++ b/gallery/index.html
@@ -167,7 +167,7 @@
             <div class="pair">
                 <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
-                    <p>FrescaMer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br></p>
+                    <p>Frescamer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br></p>
                 </div>
                 <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                     <h3>CONTACT</h3><br>
