--- a/contact/index.html
+++ b/contact/index.html
@@ -67,7 +67,7 @@
                             aria-hidden="true"></i>   info@frescamer.com</a><br><br>
                     <a href="https://www.google.com/maps/place/Model+Engineering+College/@10.0283637,76.3263237,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c5006491601:0xcf23e14245d4694d!8m2!3d10.0283637!4d76.3285124" style="font-size: 19px;" style="font-size: 19px;"><i class="fa fa-map-marker"
                             aria-hidden="true"></i>
-                            Frescamer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br><br>
+                            Frescamer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Kochi-682016<br>Kerala, India<br><br>
                     </a>
                     <div class="order">
                         <a href="order.html"><input class="submit" type="submit" value="Order Now"></a>
@@ -131,7 +131,7 @@
             <div class="pair">
                 <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
-                    <p>Frescamer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br></p>
+                    <p>Frescamer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Kochi-682016<br>Kerala, India<br></p>
                 </div>
                 <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                     <h3>CONTACT</h3><br>
@@ -142,7 +142,7 @@
                         info@frescamer.com</a><br><br><br><br><br></p>
                 </div>
             </div>
-            Frescamer | Powered by Excel 2019
+
         </div>
 
 </body>
