--- a/contact/thankyouorder.html
+++ b/contact/thankyouorder.html
@@ -120,7 +120,7 @@
             <div class="pair">
                 <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
-                    <p>Frescamer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Pallimukku,<br>Kochi-682016<br>Kerala, India<br></p>
+                    <p>Frescamer Head Office<br>Rajkamal Palakal 1st floor,<br>Near Hotel Avenue Regent,<br>Kochi-682016<br>Kerala, India<br></p>
                 </div>
                 <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                     <h3>CONTACT</h3><br>
@@ -131,7 +131,7 @@
                         info@frescamer.com</a><br><br><br><br><br></p>
                 </div>
             </div>
-            Frescamer | Powered by Excel 2019
+
         </div>
 
 </body>
